// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell basis 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      六月阶梯奖励活动
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      <i
        class="corn-icon corn-i-big-right"
        data-testid="arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Cell children 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      <span
        class="taro-text"
      >
        六月阶梯奖励活动
      </span>
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      <i
        class="corn-icon corn-i-big-right"
        data-testid="arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Cell hide arrow 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      <span
        class="taro-text"
      >
        自定义内容
      </span>
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    />
  </div>
</div>
`;

exports[`Cell href 1`] = `
<div>
  <a
    class="corn-link corn-link-normal corn-link-view corn-cell corn-f corn-ac"
    href="/home"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      前往查看
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      <i
        class="corn-icon corn-i-big-right"
        data-testid="arrow"
      />
    </div>
  </a>
</div>
`;

exports[`Cell href and hide arrow 1`] = `
<div>
  <a
    class="corn-link corn-link-normal corn-link-view corn-cell corn-f corn-ac"
    href="/home"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      前往查看
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    />
  </a>
</div>
`;

exports[`Cell label = ReactNode 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      <span
        class="taro-text"
      >
        自定义标题
      </span>
    </div>
    <div
      class="corn-cell-value"
    >
      六月阶梯奖励活动
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      重选
      <i
        class="corn-icon corn-i-big-right"
        data-testid="arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Cell placeholder 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      
      <span
        class="taro-text corn-cell-placeholder"
      >
        请选择奖励类型
      </span>
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      <i
        class="corn-icon corn-i-big-right"
        data-testid="arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Cell placeholder And Value 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      123
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      <i
        class="corn-icon corn-i-big-right"
        data-testid="arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Cell suffix = ReactNode 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      六月阶梯奖励活动
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      <span
        class="taro-text"
      >
        suffix
      </span>
    </div>
  </div>
</div>
`;

exports[`Cell suffix 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      六月阶梯奖励活动
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      重选
      <i
        class="corn-icon corn-i-big-right"
        data-testid="arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Cell value = ReactNode 1`] = `
<div>
  <div
    class="corn-cell corn-f corn-ac"
  >
    <div
      class="corn-cell-label"
    >
      限时奖励
    </div>
    <div
      class="corn-cell-value"
    >
      <span
        class="taro-text"
      >
        自定义内容
      </span>
    </div>
    <div
      class="corn-cell-suffix corn-f corn-ac"
    >
      <i
        class="corn-icon corn-i-big-right"
        data-testid="arrow"
      />
    </div>
  </div>
</div>
`;
